# Meandros

./: .gitattributes  .gitignore  LICENSE  LICENSE.md  README.md  _utils.py  arc.py  bezierPD.py  config.py  exclusion.py  frequency_plot.py  get_profile.py  group_stat.py  install_meandros.sh  landmarks.py  meandros.py  model.py  parallel_model.py  pyproject.toml  requirements.txt  roi_detect.py  roi_selection.py  run_meandros.sh  thresh-new.py  windows_App.py  zoom.py
axis_detection_module/: axis_approx.py
exclusion_module/: exclusion.py
frequency_plot_module/: frequency_plot.py
generals/: bezierPD.py  math_aux.py  windows_App.py  zoom.py  zoom_modern.py
landmarks_module/: landmarks.py
mtp/: Gastruloids-Index-Generator.ipynb  Gastruloids_Index_Generator.py  Meandros-Training-Pipeline.ipynb
profile_module/: get_profile.py  profile_code.txt
reports_sd/: sd_plots.py
roi_detection_module/: config.py  mask_rcnn_axol_hand.h5  mask_rcnn_gastruloids_roi_0120.h5  model.py  model_light.py  parallel_model.py  roi_detect.py  roi_selection.py  utils.py  visualize.py
statistics_module/: group_stat.py
