[project]
name = "Meandros"
version = "1.0.0"
authors = [
    { name="Rodrigo Carlos Cordoba", email="rodrigo.ccordoba@hotmail.com" },
    { name="Hernan Arce"},
    { name="Osvaldo Chara"}
]
license = "MIT License"
description = "Meandros Sofware"
requires-python = ">=3.8"
dependencies = [
    "tifffile>=2023.0.0",
    "h5py>=3.0.0",
    "bezier==2023.7.28",
    "imgaug>=0.4.0",
    "seaborn>=0.12.0",
    "keras==2.14.0",
    "scikit-image>=0.20.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0,<2.0.0",
    "matplotlib>=3.7.0",
    "ipython>=8.0.0",
    "pillow>=10.0.0",
    "tensorflow==2.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 